@@ -2,6 +2,15 @@ body, html {
     background: white;
     color: black;
     font-family: sans-serif;
+    font-size: 16px;
+}
+
+pre, table {
+    font-size: inherit;
+}
+
+table td {
+    line-height: 1.25em;
 }
 
 form, #content, #navigation, .searchresults {
@@ -25,7 +34,7 @@ ul.footer-versions {
 ul.footer-versions li {
     margin: 0;
     padding: 0;
-    font-size: 75%;
+    font-size: 12px;
     color: #888;
 }
 
@@ -67,7 +76,7 @@ form#search input[type=submit] {
 }
 
 .user_index_list dt {
-    font-size: 110%;
+    font-size: 18px;
     font-weight: bold;
 }
 
@@ -345,6 +354,10 @@ iframe {
     form#search input {
         font-size: 18px;
     }
+    #content,
+    .searchresults {
+        font-size: 14px;
+    }
 }
 
 @media (max-width:991px) {
@@ -368,20 +381,20 @@ iframe {
     }
 }
 
-@media (min-width:768px) {
+@media (min-width:780px) {
     form, #content, #navigation, .searchresults {
-        width: 750px;
+        width: 740px;
     }
 }
 
-@media (min-width:992px) {
+@media (min-width:1000px) {
     form, #content, #navigation, .searchresults {
-        width: 970px;
+        width: 960px;
     }
 }
 
 @media (min-width:1200px) {
     form, #content, #navigation, .searchresults {
-        width: 1170px;
+        width: 1160px;
     }
 }
