@@ -1,6 +1,7 @@
 2.1.2.dev
 ---------------
 
+- adjusted font-sizes and cut-off width of content.
 
 
 2.1.1
